Add font and variable imports to global styles; define font variables

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -45,3 +45,7 @@ $surface-brand-subtle: #EDFFF6;
 
 $border-default: #4C4C4C;
 $border-subtle: #EFEFEF;
+
+// Font Families
+$font-primary: "Pretendard", sans-serif;
+$font-mono: "Geist Mono Variable", monospace;
