--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,6 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
+@import "./font.scss";
+@import "./variables.scss";
 
 body, html {
     margin: 0;
@@ -7,7 +9,7 @@ body, html {
 
 * {
     box-sizing: border-box;
-    font-family: "Pretendard", sans-serif;
+    font-family: $font-primary;
 }
 
 h1, h2, h3, h4, h5, h6, p {
