Update dependencies and enhance styling; add lucide-react, modify global styles, and update home component layout

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -39,7 +39,7 @@ $text-brand-subtle: #EDFFF6;
 $surface-default: #0E0E0E;
 $surface-subtle: #363636;
 
-$surface-brand-default: #17F58A;
+$surface-brand-default: #ffffff;
 $surface-brand-heavy: #14CB73;
 $surface-brand-subtle: #EDFFF6;
 
