--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,8 @@
 body, html {
     margin: 0;
     padding: 0;
+
+    background-color: $surface-default;
 }
 
 * {
@@ -12,8 +14,10 @@ body, html {
     font-family: $font-primary;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, span {
     margin: 0;
+
+    color: $text-default;
 }
 
 // 스크롤바 숨기기
