--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -31,6 +31,7 @@
             }
 
             svg {
+                margin-top: 4px;
                 width: 16px;
                 height: 16px;
             }
