--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -1,12 +1,23 @@
 .header {
     width: 100%;
-    height: 80px;
+    height: 64px;
 
+    display: flex;
+    align-items: center;
+
+    padding-inline: $padding;
+}
+
+.wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    padding-inline: $padding;
+    width: 100%;
+    
+    max-width: $max-width;
+
+    margin: 0 auto;
 }
 
 .header_menu {
@@ -46,6 +57,6 @@
 }
 
 .header_logo {
-    width: 30px;
+    width: 27px;
     aspect-ratio: 1/1;
 }
