--- a/src/components/home/hero/style.module.scss
+++ b/src/components/home/hero/style.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
 
-    padding: $spacing-48 $padding;
+    padding: $spacing-64 $padding;
 }
 
 .hero_text {
@@ -19,7 +19,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: $spacing-8;
+        gap: $spacing-12;
 
         h1, h2 {
             font-weight: 400;
@@ -38,6 +38,7 @@
 
     .hero_text_date {
         color: $text-subtle;
+        font-weight: 400;
     }
 }
 
@@ -59,4 +60,38 @@
     background: linear-gradient(to bottom, transparent, $surface-default);
 
     z-index: 1;
+}
+
+.buttons {
+    margin-top: $spacing-16;
+}
+
+.hero_light {
+    background-color: #D9D9D9;
+    width: 50px;
+    height: 600px;
+
+    border-radius: $radius-full;
+
+    filter: blur(130px);
+    transform: rotate(-35deg);
+
+    position: absolute;
+    top: -120px;
+    left: 150px;
+}
+
+.hero_light_sub {
+    background-color: #3C3C3C;
+    width: 100px;
+    height: 400px;
+
+    border-radius: $radius-full;
+
+    filter: blur(130px);
+    transform: rotate(-35deg);
+
+    position: absolute;
+    top: -100px;
+    left: 500px;
 }
