Enhance home component by importing Calendar and adding spacing; update Hero and Sponsor components in the layout. Adjust button styles for primary variant and modify header positioning for improved UI. Update typography with larger headline sizes and add new spacing variable.

--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -26,7 +26,7 @@
 
   // Variant styles
   &--primary {
-    background-color: $surface-brand-default;
+    background-color: $surface-white;
     
     &:active {
       background-color: $surface-brand-heavy;
@@ -43,6 +43,10 @@
     &:hover:not(:disabled) {
       background-color: $surface-subtle;
       border-color: $text-brand-default;
+    }
+
+    svg {
+      color: $text-default !important;
     }
     
     &:active {
