--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,6 +16,7 @@ $spacing-40: 40px;
 $spacing-48: 48px;
 $spacing-64: 64px;
 $spacing-100: 100px;
+$spacing-150: 150px;
 
 $radius-4: 4px;
 $radius-8: 8px;
@@ -38,12 +39,13 @@ $text-brand-subtle: #EDFFF6;
 
 $surface-default: #0E0E0E;
 $surface-subtle: #363636;
+$surface-white: #FFFFFF;
 
-$surface-brand-default: #ffffff;
+$surface-brand-default: #17F58A;
 $surface-brand-heavy: #14CB73;
 $surface-brand-subtle: #EDFFF6;
 
-$border-default: #4C4C4C;
+$border-default: #303030;
 $border-subtle: #EFEFEF;
 
 // Font Families
