--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -10,6 +10,9 @@
     position: fixed;
     top: 0;
     z-index: 100;
+
+    // background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
 }
 
 .wrap {
