--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -37,9 +37,10 @@ $text-brand-default: #17F58A;
 $text-brand-heavy: #14CB73;
 $text-brand-subtle: #EDFFF6;
 
-$surface-default: #0E0E0E;
+$surface-default: #131313;
 $surface-subtle: #363636;
 $surface-white: #FFFFFF;
+$surface-white-subtle: #e0e0e0;
 
 $surface-brand-default: #17F58A;
 $surface-brand-heavy: #14CB73;
