--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,11 @@ h1, h2, h3, h4, h5, h6, p, span {
     margin: 0;
 
     color: $text-default;
+
+    &::selection {
+        background-color: $surface-white;
+        color: $text-black;
+    }
 }
 
 // 스크롤바 숨기기
