--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -15,7 +15,7 @@
     backdrop-filter: blur(10px);
 }
 
-.wrap {
+.header_wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
