--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -1,15 +1,18 @@
 .button {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   gap: $spacing-4;
+
   border: 0;
+
   cursor: pointer;
   transition: all 0.2s ease;
-  outline: none;
 
   &:active {
     transform: scale(0.95);
+
+    outline: none;
   }
 
   span {
