Refactor Hero and Sponsor components for improved clarity and consistency; update class names for better semantics, enhance typography with descriptive labels, and adjust spacing for a more cohesive layout.

--- a/src/components/home/hero/style.module.scss
+++ b/src/components/home/hero/style.module.scss
@@ -31,7 +31,7 @@
         letter-spacing: 2px;
     }
 
-    .hero_text_date {
+    .hero_description {
         color: $text-subtle;
         font-weight: 400;
     }
