--- a/src/components/home/sponsor/style.module.scss
+++ b/src/components/home/sponsor/style.module.scss
@@ -11,7 +11,7 @@
     color: $text-subtle;
 }
 
-.sponsor_wrapper {
+.sponsor_wrap {
     display: flex;
     flex-direction: column;
     align-items: center;
