Refactor Calendar and Money components for improved layout and styling; implement HStack for better alignment, enhance card information display, and introduce a carousel for showcasing prizes. Update styles for consistency and responsiveness.

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -39,6 +39,7 @@ $text-brand-subtle: #EDFFF6;
 
 $surface-default: #131313;
 $surface-subtle: #363636;
+$surface-subtlest: #202020;
 $surface-white: #FFFFFF;
 $surface-white-subtle: #e0e0e0;
 
