--- a/src/components/home/calendar/style.module.scss
+++ b/src/components/home/calendar/style.module.scss
@@ -28,13 +28,14 @@
     width: 100%;
     
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    gap: $spacing-20;
 
     background-color: $surface-default;
 
     padding: $spacing-24;
+
+    border: 1px solid $border-default;
 
     .card_title, .card_date {
         color: $text-default;
@@ -42,6 +43,10 @@
 
     .card_date {
         color: $text-subtle
+    }
+
+    .card_info_value {
+        color: $text-default;
     }
 
     svg {
@@ -52,10 +57,22 @@
     }
 }
 
+.card_info {
+    gap: $spacing-14;
+}
+
+.card_info_name {
+    color: $text-subtle;
+}
+
 .card_now {
     background-color: $surface-white;
 
     .card_title, .card_date {
+        color: $text-black;
+    }
+
+    .card_info_value {
         color: $text-black;
     }
 
