Add CompetitionAbout and FormAbout components to home layout; enhance Sponsor component structure with new hosting section and improved styling. Update button and typography styles for consistency.

--- a/src/components/home/calendar/style.module.scss
+++ b/src/components/home/calendar/style.module.scss
@@ -36,6 +36,7 @@
     padding: $spacing-24;
 
     border: 1px solid $border-default;
+    border-radius: $radius-20;
 
     .card_title, .card_date {
         color: $text-default;
