Enhance Money component by integrating prize data retrieval and formatting; update prize display logic for middle and general categories, and improve styling for better readability. Adjust table structure and add special prize count display.

--- a/src/components/home/money/style.module.scss
+++ b/src/components/home/money/style.module.scss
@@ -31,6 +31,8 @@
 
     th, td {
         width: 230px;
+
+        font-size: 18px;
     }
 
     th:nth-child(2), td:nth-child(2) {
@@ -46,7 +48,7 @@
     }
 
     tbody > tr {
-        height: 75px;
+        height: 80px;
     }
 
     tbody > tr:nth-child(even) {
