Add Contact component to home layout; enhance Gallery component by dynamically loading images and improving navigation functionality. Update footer structure and styling for better alignment and clarity, and remove deprecated gallery data file.

--- a/src/components/ui/footer/style.module.scss
+++ b/src/components/ui/footer/style.module.scss
@@ -1,11 +1,16 @@
 .footer {
     width: min(100%, $max-width);
 
-    padding: $spacing-100 $padding;
+    padding-block: $padding;
     margin: 0 auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.footer_address {
+.footer_address, .footer_copyright {
     color: $text-subtle;
 }
 
@@ -17,4 +22,15 @@
         height: 24px;
         fill: $text-subtle;
     }
+}
+
+.moderator_wrap span:not(.moderator_title) {
+    color: $text-subtle;
+}
+
+.creator_link {
+    cursor: pointer;
+
+    text-decoration: none;
+    color: $text-subtle;
 }
