--- a/src/components/home/merit/style.module.scss
+++ b/src/components/home/merit/style.module.scss
@@ -1,12 +1,20 @@
 .merit {
-    width: min($max-width, 100%);
-    min-height: 100vh;
+    width: min(900px, 100%);
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    padding: $spacing-100 $padding;
     margin: 0 auto;
+    padding-block: $padding;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left {
+    width: 50%;
+}
+
+.image {
+    width: 300px;
+    height: 150px;
 }
