--- a/src/components/home/money/style.module.scss
+++ b/src/components/home/money/style.module.scss
@@ -66,21 +66,8 @@
     height: 64px;
 
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-
-    span {
-        display: block;
-        text-align: center;
-    }
-
-    span:first-child {
-        width: 450px;
-    }
-
-    span:last-child {
-        width: 250px;
-    }
 }
 
 .carousel_container {
