--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,8 @@
+@use "./font.scss" as *;
+@use  "./variables.scss" as *;
+
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
-@import "./font.scss";
-@import "./variables.scss";
+
 
 body, html {
     margin: 0;
