Add Article and ArticleDetail pages; update routing to include new article paths. Enhance markdown processing with markdownToHtml function and integrate marked library for improved content rendering. Update package dependencies for marked and motion libraries.

--- a/src/components/home/about/style.module.scss
+++ b/src/components/home/about/style.module.scss
@@ -18,6 +18,7 @@
 .history_wrap {
     width: 80%;
 
+    border: 0;
     border-bottom: 4px solid $border-default;
     border-style: dashed;
     
