Enhance home components with motion animations; integrate scroll and stagger animations in About, Calendar, CompetitionAbout, Contact, FormAbout, Gallery, Hero, Merit, Money, and Sponsor components for improved user experience. Update styling for better layout and responsiveness across sections.

--- a/src/components/home/about/style.module.scss
+++ b/src/components/home/about/style.module.scss
@@ -13,6 +13,11 @@
     color: $text-subtle;
 
     text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .history_wrap {
