--- a/src/components/home/hero/style.module.scss
+++ b/src/components/home/hero/style.module.scss
@@ -37,6 +37,26 @@
     }
 }
 
+.hero_map_container {
+    width: 100%;
+    position: relative;
+
+    animation: fadeIn 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.hero_map_inner {
+    opacity: 0; // prevent SSR/initial flash
+}
+
 .hero_map {
     width: 100%;
     height: 420px;
