--- a/src/components/home/merit/style.module.scss
+++ b/src/components/home/merit/style.module.scss
@@ -14,7 +14,14 @@
     width: 50%;
 }
 
-.image {
+.image_container {
     width: 300px;
     height: 150px;
+    position: relative;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
