--- a/src/components/ui/footer/style.module.scss
+++ b/src/components/ui/footer/style.module.scss
@@ -36,5 +36,36 @@
 }
 
 @media (max-width: 768px) {
+    .footer {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 32px;
+        padding-block: 24px;
+    }
     
+    .footer_content {
+        width: 100%;
+        gap: 16px;
+    }
+    
+    .footer_right {
+        align-items: flex-start;
+        width: 100%;
+    }
+    
+    .moderator_wrap {
+        flex-direction: column;
+        gap: 20px !important;
+        align-items: flex-start;
+        width: 100%;
+    }
+    
+    .moderator_list {
+        flex-wrap: wrap;
+        gap: 12px;
+    }
+    
+    .creator_link {
+        align-self: flex-start;
+    }
 }
