--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -36,3 +36,10 @@ h1, h2, h3, h4, h5, h6, p, span {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
+
+// Winner 페이지 반응형 스타일
+.winner-page {
+    @media (max-width: 768px) {
+        padding-inline: 16px;
+    }
+}
