--- a/src/components/home/hero/style.module.scss
+++ b/src/components/home/hero/style.module.scss
@@ -23,6 +23,8 @@
     .hero_title {
         font-size: 78px;
 
+        text-align: center;
+
         z-index: 99;
     }
 
@@ -79,4 +81,50 @@
 
 .buttons {
     margin-top: $spacing-16;
+    display: flex;
+    gap: $spacing-14;
+}
+
+@media (max-width: 768px) {
+    .hero {
+        padding: $spacing-32 16px;
+    }
+    
+    .hero_text {
+        gap: $spacing-24;
+        
+        .hero_title {
+            font-size: 48px;
+            letter-spacing: -1px;
+        }
+        
+        .hero_subtitle {
+            font-size: 24px;
+            letter-spacing: 1px;
+        }
+        
+        .hero_description {
+            font-size: 16px;
+            text-align: center;
+        }
+    }
+    
+    .hero_map {
+        height: 280px;
+    }
+    
+    .hero_map_overlay {
+        height: 80px;
+        margin-top: -80px;
+    }
+    
+    .buttons {
+        flex-direction: column;
+        gap: $spacing-12;
+        width: 100%;
+        
+        button {
+            width: 100%;
+        }
+    }
 }
