--- a/src/components/home/competition-about/style.module.scss
+++ b/src/components/home/competition-about/style.module.scss
@@ -15,6 +15,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: $spacing-48;
+}
+
+.left {
+    flex: 1;
+}
+
+.right {
+    flex: 1;
 }
 
 .image {
@@ -54,5 +63,47 @@
         text-align: center;
 
         width: 90%;
+    }
+}
+
+@media (max-width: 768px) {
+    .form_about {
+        gap: $spacing-32;
+        padding-inline: 16px;
+    }
+    
+    .content {
+        flex-direction: column;
+        gap: $spacing-32;
+    }
+    
+    .left {
+        width: 100%;
+    }
+    
+    .right {
+        width: 100%;
+        align-items: flex-start !important;
+        
+        > div {
+            align-items: flex-start !important;
+            
+            > div {
+                align-items: flex-start !important;
+            }
+        }
+    }
+    
+    .image {
+        height: 120px;
+    }
+    
+    .cheat_warning {
+        padding-inline: 16px;
+        
+        span {
+            font-size: 14px;
+            line-height: 1.4;
+        }
     }
 }
