--- a/src/components/ui/section/style.module.scss
+++ b/src/components/ui/section/style.module.scss
@@ -6,3 +6,9 @@
     align-items: center;
     justify-content: center;
 }
+
+@media (max-width: 768px) {
+    .container {
+        padding: $spacing-48 $padding;
+    }
+}
