--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -40,13 +40,13 @@ h1, h2, h3, h4, h5, h6, p, span {
 // Winner 페이지 반응형 스타일
 .winner-page {
     @media (max-width: 768px) {
-        padding-inline: 16px;
+        padding-inline: $padding;
     }
 }
 
 // Maker 페이지 반응형 스타일
 .maker-page {
     @media (max-width: 768px) {
-        padding-inline: 16px;
+        padding-inline: $padding;
     }
 }
