--- a/src/components/home/merit/style.module.scss
+++ b/src/components/home/merit/style.module.scss
@@ -25,3 +25,21 @@
     height: 100%;
     object-fit: contain;
 }
+
+@media (max-width: 768px) {
+    .merit {
+        flex-direction: column;
+        gap: $spacing-32;
+        padding-block: $padding;
+        padding-inline: $padding;
+    }
+    
+    .left {
+        width: 100%;
+    }
+    
+    .image_container {
+        width: 100%;
+        height: 200px;
+    }
+}
