--- a/src/components/ui/footer/style.module.scss
+++ b/src/components/ui/footer/style.module.scss
@@ -40,7 +40,7 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 32px;
-        padding-block: 24px;
+        padding-block: $padding;
     }
     
     .footer_content {
