--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -218,7 +218,7 @@
 
 @media (max-width: 768px) {
     .header {
-        padding-inline: 16px;
+        padding-inline: $padding;
     }
 
     .header_wrap {
