--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,10 @@
 $padding: 32px;
 
+// 모바일 환경에서 padding 값 덮어씌우기
+@media (max-width: 768px) {
+    $padding: 22px;
+}
+
 $max-width: 1200px;
 
 $spacing-4: 4px;
