--- a/src/components/home/hero/style.module.scss
+++ b/src/components/home/hero/style.module.scss
@@ -83,6 +83,35 @@
     margin-top: $spacing-16;
     display: flex;
     gap: $spacing-14;
+    justify-content: center;
+}
+
+.countdown_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: $spacing-16;
+}
+
+.coming_soon {
+    color: $text-subtle;
+    font-weight: 500;
+    text-align: center;
+    font-size: 18px;
+}
+
+.countdown {
+    color: $text-default;
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 1px;
+}
+
+.closed {
+    color: $text-subtle;
+    font-weight: 500;
+    text-align: center;
 }
 
 @media (max-width: 768px) {
@@ -126,5 +155,18 @@
         button {
             width: 100%;
         }
+    }
+    
+    .countdown_container {
+        gap: $spacing-8;
+    }
+    
+    .countdown {
+        font-size: 28px;
+        font-weight: 700;
+    }
+    
+    .coming_soon {
+        font-size: 16px;
     }
 }
