--- a/src/components/home/form-about/style.module.scss
+++ b/src/components/home/form-about/style.module.scss
@@ -16,6 +16,10 @@
 
 .right {
     flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .description {
@@ -40,5 +44,7 @@
     
     .right {
         width: 100%;
+
+        align-items: flex-start;
     }
 }
