--- a/src/components/ui/light/light.module.scss
+++ b/src/components/ui/light/light.module.scss
@@ -19,6 +19,7 @@
         left: 100px;
         top: -80px;
         filter: blur(80px);
+        transform: rotate(-25deg);
     }
 
     @media (max-width: 480px) {
@@ -27,6 +28,7 @@
         left: 80px;
         top: -60px;
         filter: blur(60px);
+        transform: rotate(-20deg);
     }
 }
 
@@ -50,6 +52,7 @@
         height: 300px;
         top: -70px;
         filter: blur(60px);
+        transform: rotate(-25deg);
     }
 
     @media (max-width: 480px) {
@@ -57,6 +60,7 @@
         height: 250px;
         top: -50px;
         filter: blur(50px);
+        transform: rotate(-20deg);
     }
 }
 
